# fivim

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc.toml  LICENSE  README.md  global.d.ts  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  splashscreen.html  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  main.yml  vitepress.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.js
docs/en/: develop.md  faq.md  file_format.md  index.md  themes.md  user_data_struct.md  user_manual.md
docs/en/develop/: file_format.md  git.md  overview.md  user_data_struct.md
docs/en/user_guide/: desktop.md  getting_started.md  themes.md
docs/en_US/: develop.md  file_format.md  user_data_struct.md  user_manual.md
public/materialicons/: materialicons.css
src/: App.tsx  App.vue  conf.ts  constants.ts  index.tsx  initialize.ts  main.ts  types.ts  types_common.ts  types_template.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/locales/: ar.json  be-BY.json  bg-BG.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en.json  es.json  fa-IR.json  fi-FI.json  fr.json  he-IL.json  hi-IN.json  hu-HU.json  id-ID.json  it-IT.json  ja-JP.json  kk-KZ.json  ko-KR.json  ms.json  my-MM.json  nb-NO.json  nl-NL.json  pl-PL.json  pt.json  ro-RO.json  ru-RU.json  sk-SK.json  sr-SP.json  sv-SE.json  th-TH.json  tr-TR.json  uk-UA.json  ur.json  vi-VN.json  zh-CHS.json  zh-CHT.json
src-tauri/src/: commands.rs  conf.rs  data_file_parse.rs  dir.rs  i18n.rs  log.rs  main.rs  menu.rs
src-tauri/src/commands/: encrypt_hash.rs  fs.rs  mod.rs  net.rs  other.rs  search.rs
src-tauri/src/utils/: array_like.rs  dir.rs  encrypt.rs  file.rs  hash.rs  http.rs  logger.rs  mod.rs  path.rs  tauri.rs  tauri_config.rs
src-tauri/src/x_encrypt/: Cargo.toml
src-tauri/src/x_encrypt/src/: aes_cbc.rs  aes_cbc_256.rs  aes_ccm.rs  chacha20poly1305.rs  lib.rs  xchacha20poly1305.rs
src-tauri/src/x_sjcl/: Cargo.toml  README.md
src-tauri/src/x_sjcl/src/: decryption.rs  encryption.rs  lib.rs
src-tauri/src/x_utils/: Cargo.toml
src-tauri/src/x_utils/src/: array_like.rs  dir.rs  errors.rs  file.rs  fs.rs  hash.rs  lib.rs  logger.rs  path.rs  progress.rs  string.rs  sys.rs
src/components/AlertDialog/: index.tsx  styles.module.scss
src/components/Collapsible/: index.tsx  styles.module.scss
src/components/ContentTags/: index.tsx  styles.module.scss
src/components/Dialog/: index.tsx  styles.module.scss
src/components/Editor/: constants.ts  html.ts  index.tsx
src/components/FileTree/: TreeMenu.tsx  index.tsx
src/components/LayoutDesktop/: constants.ts  index.tsx  styles.module.scss  types.ts
src/components/LayoutMobile/: index.tsx
src/components/LinkTags/: index.tsx  styles.module.scss
src/components/Loading/: index.tsx  styles.module.scss
src/components/LockScreen/: index.tsx  styles.module.scss
src/components/MessageLine/: index.tsx  styles.module.scss
src/components/Nebula/: index.ts
src/components/Outline/: index.tsx  styles.module.scss
src/components/Search/: index.tsx  styles.module.scss
src/components/Select/: index.tsx  styles.module.scss
src/components/Settings/: index.tsx  styles.module.scss
src/components/SetupWizard/: index.tsx  styles.module.scss
src/components/Tabs/: index.tsx  styles.module.scss
src/components/Tooltip/: index.tsx  styles.module.scss
src/components/UI_component/: x_popover.vue
src/components/button/: About.vue  AddDoc.vue  AddFile.vue  EditorAction.vue  EditorTag.vue  ItemsAdd.vue  ItemsSort.vue  ListAdd.vue  ListShareFile.vue  ListSort.vue  LockScreen.vue  Save.vue  SelectEmoji.vue  SelectTag.vue  Setting.vue  Theme.vue  WindowExtAction.vue
src/components/editor/: Editorjs.vue  File.vue
src/components/pane/: PaneEditor.vue  PaneItems.vue  PaneList.vue  PaneNavigation.vue  Resizer.vue  common.scss  pane-editor.scss  pane-items.scss  pane-list.scss  pane-navigation.scss  types.ts  types_template.ts
src/components/widget/: BackgroundProcessBar.vue  BackgroundProgressBar.vue  LoadingChangeMasterPassword.vue  LoadingUpdateFilesSha256.vue  Lockscreen.vue  SetupWizard.vue  SmallTagList.vue  XPopover.vue  loading.scss
src/components/xPopover/: popover.vue
src/i18n/: en.json  index.ts  zh_CN.json
src/invoker/: adapter.ts  command_tauri.ts  command_web.ts  index.ts  types.ts
src/libs/commands/: command_tauri.ts  command_web.ts  index.ts  invoke.ts  types.ts
src/libs/editorjs/: conf.ts  types.d.ts  (+1 more)
src/router/: index.ts
src/stores/: globalStore.ts  passwordStore.ts  settingStore.ts
src/stores_utils/: index.ts  path.ts  tauri_like.ts
src/styles/: _space.scss  _text.scss  _variables.scss  antd.scss  common.scss  common_class.scss  exsied.scss  index.scss  main.scss  mixin.scss  utils.scss
src/synchronizer/: constants.ts  index.ts  sync_base.ts  sync_gitee_api_v5.ts  sync_gitlab_api.ts  types.ts
src/utils/: array.ts  bytes.ts  dom.ts  hash.ts  html.ts  locale.ts  media_query.ts  number.ts  os.ts  pinia_data_related.ts  pinia_related.ts  string.ts  tauri_like.ts  time.ts  utils.ts
src/views/: Index.vue
(+139 files in other folders)
