[package]
name = "encryption_assistant"
version = "1.2.0"
description = "Encryption assistant"
authors = ["newproplus"]
license = ""
repository = "https://github.com/enassi/enassi"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
crc32fast = "1.3.2"
custom_error = "1.9.2"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
sys-info = "0.9.1"
tauri = {version = "1.2.2", features = ["api-all", "system-tray"] }
time = "0.3.20"
window-shadows = "0.2.0"
xencrypt = { path = "./src/x_encrypt/" }
xutils = { path = "./src/x_utils/" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
