[package]
name = "enassi"
version = "2.1.0"
description = "Encryption assistant"
authors = ["newproplus"]
license = ""
repository = "https://github.com/enassi/enassi"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5", features = [] }

[dependencies]
base64 = "0.21"
chrono = "0.4"
crc32fast = "1.3"
custom_error = "1.9"
filetime = "0.2"
fs_extra = "1.3"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.3"
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sys-info = "0.9"
tauri = {version = "1.6", features = ["api-all", "system-tray", "devtools"] }
time = "0.3"
window-shadows = "0.2"
enassi-rs-utils = "1.0.0"
enassi-rs-commands = "1.0.0"
dirs = "5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
