[package]
name = "fivim"
version = "2.4.0"
description = "Encryption assistant"
authors = ["newproplus"]
license = ""
repository = "https://github.com/fivim/fivim"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all", "system-tray", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#
fivim-rs-utils = "1.2"
fivim-rs-commands = "1.2"
dirs = "5.0"
log = "0.4"
log4rs = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
