[package]
name = "xutils"
description = ""
version = "1.0.0"
authors = [""]
edition = "2018"
license = ""
homepage = ""
repository = ""
readme = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
crc32fast = "1.3.2"
custom_error = "1.9.2"
fs_extra = "1.3.0"
log = { version = "0.4.*", features = ["std"] }
md5 = "0.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
simplelog = "^0.12.1"
sys-info = "0.9.1"
time = "0.3.20"